page header title fixed alignment

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -15,6 +15,7 @@
   width: fit-content;
   padding: 4px 24px;
   border-radius: 16px;
+  text-align: center;
   @media (max-width: 576px) {
     font-size: 20px;
     text-align: center;
